--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.4.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
